stdout code