@@ -250,45 +250,20 @@ public class Main {
     
     private static void executeExternalProgramForRedirection(String input, FileWriter writer) {
         try {
-            Process process = Runtime.getRuntime().exec(input);
+            ProcessBuilder processBuilder = new ProcessBuilder(input.split("\\s+"));
+            processBuilder.redirectErrorStream(true);
 
-            Thread outputThread = new Thread(() -> {
-                try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-                    String line;
-                    while ((line = reader.readLine()) != null) {
-                        try {
-                            writer.write(line + "\n");
-                        } catch (IOException e) {
-                            System.out.println("Error writing to file: " + e.getMessage());
-                        }
-                    }
-                } catch (IOException e) {
-                    System.out.println("Error reading output: " + e.getMessage());
+            Process process = processBuilder.start();
+
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    writer.write(line + "\n");
                 }
-            });
 
-            Thread errorThread = new Thread(() -> {
-                try (BufferedReader errorReader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
-                    String line;
-                    while ((line = errorReader.readLine()) != null) {
-                        try {
-                            writer.write(line + "\n");
-                        } catch (IOException e) {
-                            System.out.println("Error writing to file: " + e.getMessage());
-                        }
-                    }
-                } catch (IOException e) {
-                    System.out.println("Error reading error stream: " + e.getMessage());
-                }
-            });
-
-            outputThread.start();
-            errorThread.start();
-
-            process.waitFor();
-            outputThread.join();
-            errorThread.join();
-            writer.flush();
+                process.waitFor();
+                writer.flush();
+            }
         } catch (IOException | InterruptedException e) {
             try {
                 writer.write("Error executing command: " + e.getMessage() + "\n");
